[package]
name = "test-rpc-u128"
version = "0.1.0"
edition = "2018"

[dependencies]
#serde = { version = "1.0.104", default-features = false, features = ["derive"] }
#serde_json = "1.0.48"
serde = "1.0"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }

#jsonrpc-core = "15.0.0"
#jsonrpc-core-client = "15.0.0"
#jsonrpc-derive = "15.0.0"
#jsonrpc-http-server = "15.0.0"
jsonrpc-core = { version = "15.0.0", features = ["arbitrary_precision"] }
jsonrpc-core-client = "15.0.0"
jsonrpc-derive = "15.0.0"
jsonrpc-http-server = "15.0.0"
